--- a/deploy/01-uds-dr-deployment.yaml
+++ b/deploy/01-uds-dr-deployment.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: dce-uds-dr-controller
+  name: dce-pelicon-dr-controller
   namespace: kube-system
 spec:
   replicas: 1
   selector:
     matchLabels:
-      name: dce-uds-dr-controller
+      name: dce-pelicon-dr-controller
   template:
     metadata:
       labels:
-        name: dce-uds-dr-controller
+        name: dce-pelicon-dr-controller
     spec:
-      serviceAccount: dce-uds-admin
+      serviceAccount: dce-pelicon-admin
       containers:
-        - name: dce-uds-dr-controller
-          image: daocloud.io/daocloud/dce-uds-dr-controller:v0.1.0
+        - name: dce-pelicon-dr-controller
+          image: daocloud.io/daocloud/dce-pelicon-dr-controller:v0.1.0
           imagePullPolicy: Always
           args:
           env:
@@ -26,7 +26,7 @@ spec:
                 fieldRef:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
-              value: "dce-uds-dr-controller"
+              value: "dce-pelicon-dr-controller"
           resources:
             limits:
               memory: 100Mi
