--- a/deploy/testing/dr-cluster-01.yaml
+++ b/deploy/testing/dr-cluster-01.yaml
@@ -1,4 +1,4 @@
-apiVersion: udsdr.dce.daocloud.io/v1alpha1
+apiVersion: dr.dce.daocloud.io/v1alpha1
 kind: DRCluster
 metadata:
   name: dr-cluster-01
