--- a/deploy/crds/udsdr.dce.daocloud.io_drclusters_crd.yaml
+++ b/deploy/crds/udsdr.dce.daocloud.io_drclusters_crd.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: drclusters.dr.dce.daocloud.io
+  name: drclusters.dr.pelicon.io
 spec:
   additionalPrinterColumns:
   - JSONPath: .status.role
@@ -23,7 +23,7 @@ spec:
   - JSONPath: .metadata.creationTimestamp
     name: age
     type: date
-  group: dr.dce.daocloud.io
+  group: dr.pelicon.io
   names:
     kind: DRCluster
     listKind: DRClusterList
