--- a/helm-charts/charts/pelicon-dr/values.yaml
+++ b/helm-charts/charts/pelicon-dr/values.yaml
@@ -2,6 +2,7 @@ peliconImageRegistry: ghcr.io
 # Users in China can change to these sites for option
 #peliconImageRegistry: ghcr.m.daocloud.io
 
+# DR Controller configs
 drcontroller:
   replicas: 1
   imageRepository: pelicon/dr
@@ -14,6 +15,7 @@ drcontroller:
       cpu: 100m
       memory: 100Mi
 
+# DR pair clusters credentials and configs
 drClusters:
   - clusterName: dr-cluster-01
     clusterSpec:
@@ -75,6 +77,7 @@ drClusters:
       role: dr_role_bkup
       transportAdapter: dr_transport_adapter_kube_apiserver
     
+# DR namesapce configs, include resource column mappings, whitelist and blacklist
 namespacesToSync:
   - namespace: default
     spec:
