fix image repo in helm chart

--- a/helm-charts/charts/pelicon-dr/values.yaml
+++ b/helm-charts/charts/pelicon-dr/values.yaml
@@ -1,11 +1,9 @@
 peliconImageRegistry: ghcr.io
-# Users in China can change to these sites for option
-#peliconImageRegistry: ghcr.m.daocloud.io
 
 # DR Controller configs
 drcontroller:
   replicas: 1
-  imageRepository: pelicon/dr
+  imageRepository: pelicon/pelicon-dr-controller
   tag: v0.0.1
   resources:
     limits:
